# fifo-tool-airlock-model-env

./: .gitignore  README.md  SECURITY.md  model_config.example.json  pyproject.toml
bridge/: fastapi_server.py
client/: run.py
common/: models.py
fifo_tool_airlock_model_env/bridge/: fastapi_server.py
fifo_tool_airlock_model_env/cli/: start_server_and_bridge.py
fifo_tool_airlock_model_env/client/: run.py
fifo_tool_airlock_model_env/common/: models.py
fifo_tool_airlock_model_env/examples/: call_model.py  call_multimodal_model.py
fifo_tool_airlock_model_env/fine_tuning/phi_4/: fine_tune.py
fifo_tool_airlock_model_env/sdk/: client_sdk.py
fifo_tool_airlock_model_env/server/: fastapi_server.py  llm_model.py  llm_model_loader.py  llm_model_phi_4_base.py  llm_model_phi_4_base_with_adapters.py  llm_model_phi_4_mini_instruct.py  llm_model_phi_4_multimodal_instruct.py  logging_config.py
sdk/: client_sdk.py
server/: fastapi_server.py  llm_model.py  llm_model_phi_4.py  llm_model_phi_4_base.py  llm_model_phi_4_base_with_adapters.py  llm_model_phi_4_mini_instruct.py  llm_model_phi_4_multimodal_instruct.py
utils/: start_server_and_bridge.py
