[project]
name = "fifo-tool-airlock-model-env"
version = "0.1.0"
description = "Isolated runtime for Hugging Face models requiring `trust_remote_code=True`, using a loopback-only Docker container and a FastAPI bridge"
authors = [
  { name = "Florent Gastoud" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic",
  "fastapi",
  "uvicorn"
]

[project.optional-dependencies]
server = [
  # The following package versions reflect the latest tested set as of 05/23/2025.
  # Change versions if specific compatibility is required.
  "transformers==4.50.3",
  "torch==2.6.0+cu126",
  "flash_attn==2.7.4.post1",
  "accelerate==1.7.0",
  "soundfile==0.13.1",
  "pillow==11.0.0",
  "scipy==1.15.2",
  "torchvision==0.21.0+cu126",
  "backoff==2.2.1",
  "peft==0.15.2",
  "bitsandbytes==0.45.5"
]

sdk = [
  "requests"
]

# Optional: add extras for fine-tuning
fine_tuning = [
  "trl",
  "datasets"
]

[build-system]
requires = [
  "setuptools>=80.8.0",
  "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"
